<resources>
    <string name="app_name">Preguntas y Respuestas</string>
    <string name="nombre">Nombre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="logoaplicacion">logoAplicacion</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="necesita_ayuda">¿Necesita ayuda?</string>
    <string name="universidad_santiago_de_cali">Universidad Santiago de Cali</string>
    <string name="reingrese_la_contrase_a">Reingrese la contraseña</string>
    <string name="cerrarsesion">CerrarSesion</string>

    <string name="title_activity_inside">activity_inside</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" />
    <string name="nav_header_subtitle" />
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Información</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="comunicacion">Comunicacion</string>
    <string name="menu_informacion">Información</string>
    <string name="cambiar_imagen_de_perfil">Cambiar Imagen de Perfil</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="title_activity_cambiar_contra">activity_cambiarContra</string>
    <string name="contrase_a_anterior">contraseña anterior</string>
    <string name="contrase_a_anteriort">Contraseña anterior</string>
    <string name="cambiar">Cambiar</string>
    <string name="cancelar">Cancelar</string>
    <string name="imagen_de_usuario">Imagen de Usuario</string>

    <string name="urlUsuario">http://192.168.1.53/WebApi/usuario/</string>
    <string name="urlPregunta">http://192.168.1.53/WebApi/preguntas/</string>
    <string name="jugar">Jugar</string>
    <string name="puntaje">Puntaje</string>
    <string name="imagen_segun_posicion">Imagen segun posicion</string>
    <string name="trofeos">Trofeos</string>
    <string name="saltar">Saltar</string>
</resources>
