<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/clasificacion"
            android:title="@string/menu_ranking" />
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_cuenta" />
    </group>

    <item android:title="@string/comunicacion">
        <menu>
            <item
                android:id="@+id/nav_informacion"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_informacion" />
        </menu>
    </item>

</menu>
