<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgPos1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen_segun_posicion"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:srcCompat="@drawable/a1" />

    <ImageView
        android:id="@+id/imgPos2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen_segun_posicion"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPos1"
        app:srcCompat="@drawable/a1" />

    <ImageView
        android:id="@+id/imgPos3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen_segun_posicion"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPos2"
        app:srcCompat="@drawable/a1" />

    <ImageView
        android:id="@+id/imgPos4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen_segun_posicion"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/a1" />

    <ImageView
        android:id="@+id/imgPos5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen_segun_posicion"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPos4"
        app:srcCompat="@drawable/a1" />

    <TextView
        android:id="@+id/txtNombrePos1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgPos1"
        app:layout_constraintStart_toEndOf="@+id/imgPos1"
        app:layout_constraintTop_toTopOf="@+id/imgPos1" />

    <TextView
        android:id="@+id/txtNombrePos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imgPos2"
        app:layout_constraintStart_toStartOf="@+id/txtNombrePos1"
        app:layout_constraintTop_toTopOf="@+id/imgPos2" />

    <TextView
        android:id="@+id/txtNombrePos3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imgPos3"
        app:layout_constraintStart_toStartOf="@+id/txtNombrePos2"
        app:layout_constraintTop_toTopOf="@+id/imgPos3" />

    <TextView
        android:id="@+id/txtNombrePos4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imgPos4"
        app:layout_constraintStart_toStartOf="@+id/txtNombrePos3"
        app:layout_constraintTop_toTopOf="@+id/imgPos4" />

    <TextView
        android:id="@+id/txtNombrePos5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgPos5"
        app:layout_constraintStart_toStartOf="@+id/txtNombrePos4"
        app:layout_constraintTop_toTopOf="@+id/imgPos5" />

    <TextView
        android:id="@+id/txtPuntajePos1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/txtNombrePos1" />

    <TextView
        android:id="@+id/txtPuntajePos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txtPuntajePos1"
        app:layout_constraintTop_toTopOf="@+id/txtNombrePos2" />

    <TextView
        android:id="@+id/txtPuntajePos3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txtPuntajePos2"
        app:layout_constraintTop_toTopOf="@+id/txtNombrePos3" />

    <TextView
        android:id="@+id/txtPuntajePos4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txtPuntajePos3"
        app:layout_constraintTop_toTopOf="@+id/txtNombrePos4" />

    <TextView
        android:id="@+id/txtPuntajePos5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txtPuntajePos4"
        app:layout_constraintTop_toTopOf="@+id/txtNombrePos5" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen_segun_posicion"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/txtPuntajePos1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPuntajePos1"
        app:srcCompat="@drawable/oro" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen_segun_posicion"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/txtPuntajePos3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPuntajePos3"
        app:srcCompat="@drawable/bronce" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/imagen_segun_posicion"
        app:layout_constraintBottom_toBottomOf="@+id/txtPuntajePos2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPuntajePos2"
        app:srcCompat="@drawable/plata" />

    <View
        android:id="@+id/divider"
        android:layout_width="378dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPos3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtNombrePos1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/puntaje"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtPuntajePos1"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="378dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>